--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -99,6 +99,7 @@ library
     , mmorph >= 1.1
     , profunctors >= 5.2
     , selective >= 0.5
+    , constraints >= 0.13
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions: StrictData
