--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         ghc: ['8.8.4','8.10.7','9.0.2','9.2.5','9.4.5']
         os: [ubuntu-latest]
     name: Haskell GHC ${{ matrix.ghc }} cabal + stack
+    needs: fourmolu
     steps:
       - uses: actions/checkout@v3
       - uses: haskell/actions/setup@v2
