--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -133,6 +133,7 @@ test-suite test
     , test-framework >= 0.8
     , test-framework-quickcheck2 >= 0.3
     , QuickCheck >= 2.12
+    , selective >= 0.4
     , test-framework-hunit >= 0.3
     , HUnit >= 1.3
     , vector-sized >= 1.2
