--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,27 @@ jobs:
       run: |
         nix shell nixpkgs#haskellPackages.fourmolu --command fourmolu --mode check .
 
+  generateMatrix:
+    name: "Generate matrix from cabal"
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: kleidukos/get-tested@v0.1.7.0
+        id: set-matrix
+        with:
+          cabal-file: "essence-of-live-coding/essence-of-live-coding.cabal"
+          ubuntu: true
+          version: 0.1.6.0
+
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
+    needs:
+      - generateMatrix
+      - fourmolu
     strategy:
-      matrix:
-        ghc: ['8.8.4','8.10.7','9.0.2','9.2.5','9.4.5']
-        os: [ubuntu-latest]
+      matrix: ${{ fromJSON(needs.generateMatrix.outputs.matrix) }}
     name: Haskell GHC ${{ matrix.ghc }} cabal + stack
-    needs: fourmolu
     steps:
       - uses: actions/checkout@v3
       - uses: haskell/actions/setup@v2
