--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -29,6 +29,7 @@ tested-with:
   GHC == 9.2.8
   GHC == 9.4.8
   GHC == 9.6.5
+  GHC == 9.8.2
 
 source-repository head
   type:     git
@@ -89,7 +90,7 @@ library
 
   other-extensions:    DeriveDataTypeable
   build-depends:
-      base >= 4.13 && < 4.19
+      base >= 4.13 && < 4.20
     , transformers >= 0.5
     , containers >= 0.6
     , syb >= 0.7
@@ -125,7 +126,7 @@ test-suite test
     , Util.LiveProgramMigration
   hs-source-dirs: test
   build-depends:
-      base >= 4.13 && < 4.19
+      base >= 4.13 && < 4.20
     , syb >= 0.7
     , transformers >= 0.5
     , containers >= 0.6
@@ -144,7 +145,7 @@ executable TestExceptions
   main-is: TestExceptions.hs
   hs-source-dirs: app
   build-depends:
-      base >= 4.13 && < 4.19
+      base >= 4.13 && < 4.20
     , essence-of-live-coding
     , transformers >= 0.5
   default-language:    Haskell2010
@@ -153,7 +154,7 @@ executable TestNonBlocking
   main-is: TestNonBlocking.hs
   hs-source-dirs: app
   build-depends:
-      base >= 4.13 && < 4.19
+      base >= 4.13 && < 4.20
     , transformers >= 0.5
     , essence-of-live-coding
   default-language:    Haskell2010
