--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,31 +44,49 @@ jobs:
     name: Haskell GHC ${{ matrix.ghc }} cabal
     steps:
       - uses: actions/checkout@v4
-      - uses: haskell/actions/setup@v2
-        id: setup-haskell-build
+      - uses: haskell-actions/setup@v2
+        id: setup
         with:
           ghc-version: ${{ matrix.ghc }}
       - name: update apt
-        run: sudo apt update      
+        run: sudo apt update
       - name: Install dependencies
         run: sudo apt-get install -y libxml2-utils libgl1-mesa-dev libglu1-mesa-dev freeglut3-dev libpulse-dev libblas-dev liblapack-dev libasound2-dev wget
-      - name: Cabal update
-        run: cabal update
-      - name: Cache Cabal build artifacts
-        uses: actions/cache@v4
-        with:
-          path: |
-            ${{ steps.setup-haskell-build.outputs.cabal-store }}
-            dist-newstyle
-          key: ${{ runner.os }}-cabal-${{ matrix.ghc }}
-          restore-keys: |
-            ${{ runner.os }}-cabal-${{ matrix.ghc }}
-      - name: Cabal build dependencies
+
+      - name: Configure the build
         run: |
-          cabal build all  --enable-tests --only-dependencies
+          cabal configure --enable-tests --enable-benchmarks --disable-documentation
+          cabal build all --dry-run
+        # The last step generates dist-newstyle/cache/plan.json for the cache key.
+
+      - name: Restore cached dependencies
+        uses: actions/cache/restore@v4
+        id: cache
+        env:
+          key: ${{ runner.os }}-ghc-${{ steps.setup.outputs.ghc-version }}-cabal-${{ steps.setup.outputs.cabal-version }}
+        with:
+          path: ${{ steps.setup.outputs.cabal-store }}
+          key: ${{ env.key }}-plan-${{ hashFiles('**/plan.json') }}
+          restore-keys: ${{ env.key }}-
+
+      - name: Install dependencies
+        # If we had an exact cache hit, the dependencies will be up to date.
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: cabal build all --enable-tests --enable-benchmarks --only-dependencies
+
+      # Cache dependencies already here, so that we do not have to rebuild them should the subsequent steps fail.
+      - name: Save cached dependencies
+        uses: actions/cache/save@v4
+        # If we had an exact cache hit, trying to save the cache would error because of key clash.
+        if: steps.cache.outputs.cache-hit != 'true'
+        with:
+          path: ${{ steps.setup.outputs.cabal-store }}
+          key: ${{ steps.cache.outputs.cache-primary-key }}
+
       - name: Cabal build packages
         run: |
           cabal build all --enable-tests
+
       - name: Cabal test
         run: |
           cabal test all --enable-tests --test-show-details=Always
