--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v31
+    - uses: haskell-actions/run-fourmolu@v11
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
-    - name: Set up and run fourmolu
-      run: |
-        nix shell nixpkgs#haskellPackages.fourmolu --command fourmolu --mode check .
+        version: "0.14.0.0"
 
   generateMatrix:
     name: "Generate matrix from cabal"
