--- a/essence-of-live-coding/essence-of-live-coding.cabal
+++ b/essence-of-live-coding/essence-of-live-coding.cabal
@@ -31,6 +31,7 @@ tested-with:
   GHC == 9.6
   GHC == 9.8
   GHC == 9.10
+  GHC == 9.12
 
 source-repository head
   type:     git
@@ -43,7 +44,7 @@ source-repository this
 
 common opts
   build-depends:
-      base >= 4.13 && < 4.21
+      base >= 4.13 && < 4.22
     , transformers >= 0.5
     , containers >= 0.6
     , syb >= 0.7
@@ -144,7 +145,7 @@ executable TestExceptions
   main-is: TestExceptions.hs
   hs-source-dirs: app
   build-depends:
-      base >= 4.13 && < 4.21
+      base >= 4.13 && < 4.22
     , essence-of-live-coding
     , transformers >= 0.5
   default-language:    Haskell2010
@@ -153,7 +154,7 @@ executable TestNonBlocking
   main-is: TestNonBlocking.hs
   hs-source-dirs: app
   build-depends:
-      base >= 4.13 && < 4.21
+      base >= 4.13 && < 4.22
     , transformers >= 0.5
     , essence-of-live-coding
   default-language:    Haskell2010
